# SFMLPhysicsProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SFMLPhysicsProject.sln
SFMLPhysicsProject/: 879.txt  9999999999999.txt  Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  CollidingElastic.txt  Eval.txt  LongRangeShot.txt  SFMLPhysicsProject.vcxproj  SFMLPhysicsProject.vcxproj.filters  StatesManager.cpp  StatesManager.h  TestCollision.txt  asa.txt  file.txt  file0.txt  main.cpp  quick.txt  redo test.txt  samevelocity.txt  save this.txt  sdsasds asdsds.txt  secondtest.txt  test collision.txt  testfile1.txt  testfile6.txt  testfile7.txt  testsave.txt
